# tokenproxy

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  build.rs  very_detailed_tokenproxy_spec.html
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: oauth-refresh-spec.md
src/: auth.rs  benchmark.rs  build_info.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  model.rs  observability.rs  server.rs  time_parse.rs  timestamps.rs  usage.rs
src/http/: classify.rs  forward.rs  mod.rs  models.rs  sse_repair.rs
src/responses/: mod.rs  replay.rs  state.rs  websocket.rs
src/routing/: account.rs  health.rs  mod.rs  select.rs
src/server/: mod.rs  proxy.rs  state.rs  tests.rs
stage_one_evidence/: tokenproxy-deep-transport-research.json  tokenproxy-deep-transport-research.md
stage_one_evidence/2026-05-27T005200-0700-network-probes/: curl_timings.csv  dns.txt  environment.txt  submodule_status.txt  summary.txt  tls.txt  websocket_unauthenticated.txt
stage_one_evidence/2026-05-27T023722-0700-network-probes/: curl_timings.csv  dns.txt  environment.txt  tls.txt  websocket_unauthenticated.txt
stage_one_evidence/2026-05-27T025959-0700-network-probes/: curl_timings.csv  dns.txt  environment.txt  summary.txt  websocket_unauthenticated.txt
stage_one_evidence/2026-05-27T030504-0700-network-probes/: curl_timings.csv  dns.txt  environment.txt  summary.txt  tls.txt  websocket_unauthenticated.txt
stage_one_evidence/2026-05-27T030553-0700-network-probes/: curl_timings.csv  dns.txt  environment.txt  summary.txt
stage_one_evidence/2026-05-27T032111-0700-network-probes/: curl_summary.txt  curl_timings.csv  environment.txt  openai_status_status.json  openai_status_summary.json  summary.txt  tls.txt  websocket_unauthenticated.txt
stage_one_evidence/2026-05-27T032143-0700-network-probes/: curl_timings.csv  environment.txt  summary.txt
stage_one_evidence/2026-05-27T032158-0700-network-probes/: curl_timings.csv  dns.txt  environment.txt  summary.txt
stage_one_evidence/2026-05-27T032253-0700-network-probes/: curl_summary.txt  curl_timings.csv  dns.txt  environment.txt  summary.txt
stage_one_evidence/2026-05-27T032310-0700-network-probes/: curl_timings.csv  dns.txt  environment.txt  summary.txt  tls.txt
stage_one_evidence/2026-05-27T032313-0700-network-probes/: curl_stats.txt  curl_timings.csv  environment.txt  summary.txt  tls.txt
stage_one_evidence/2026-05-27T032719-0700-endpoint-inventory/: endpoint_probe.csv  environment.txt  summary.txt
stage_one_evidence/2026-05-27T035544-0700-openai-transport-probes/: curl_protocol_timings.csv  (+12 more)
(+232 files in other folders)
