[package]
name = "tokenproxy"
version = "0.1.0"
edition = "2024"

[lib]
name = "tokenproxy"
path = "src/lib.rs"

[dependencies]
arc-swap = "1"
axum = { version = "0.8", features = ["ws", "json"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
http = "1"
httpdate = "1"
humantime = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
toml = "0.9"
tower = { version = "0.5", features = ["util"] }
webpki-roots = "1"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2

[profile.fast-build]
inherits = "dev"
debug = 0
strip = "debuginfo"

[profile.release]
strip = true
