[package]
name = "tokenproxy"
version = "0.1.13"
edition = "2024"
license = "MIT"

[lib]
name = "tokenproxy"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "json"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
eventsource-stream = "0.2"
futures-util = "0.3"
http = "1"
httpdate = "1"
humantime = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shellexpand = { version = "3", default-features = false, features = ["base-0"] }
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
toml = "0.9"
zstd = { version = "0.13", default-features = false }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2

[profile.fast-build]
inherits = "dev"
debug = 0
strip = "debuginfo"

[profile.release]
strip = true
